--- a/css/styles.css
+++ b/css/styles.css
@@ -3,10 +3,12 @@
   height: 100px;
   background-color: white;
   border: 1px solid black;
+  color: black;
 }
 
 #keys > td.black {
   background-color: black;
+  color: white;
 }
 
 #keys > .pressed,
